# PAOO-CMake

./: .gitignore  README.md
.github/workflows/: cmake-multi-platform.yml
CMake_tutorial/Step1/: CMakeLists.txt
Homework/src/: CMakeLists.txt  main.cpp
Homework/src/CreditCardEntry/: CMakeLists.txt  CreditCardEntry.cpp  CreditCardEntry.h
Homework/src/Database/: CMakeLists.txt  Database.cpp  Database.h
Homework/src/Entry/: CMakeLists.txt  Entry.cpp  Entry.h  IEntry.h
Homework/src/LoginEntry/: CMakeLists.txt  LoginEntry.cpp  LoginEntry.h
Homework/src/SecureNoteEntry/: CMakeLists.txt  SecureNoteEntry.cpp  SecureNoteEntry.h
Lab_practice/: CMakeLists.txt  main.cpp
Lab_practice/headers/: CMakeLists.txt
Step1/: tutorial.cxx
Tema1/src/Database/: CMakeLists.txt
Tema1/src/Entry/: CMakeLists.txt  Entry.cpp  Entry.h
labs4/: main
labs4/headers/: cat.cpp  cat.h
